# backend.ai-submission-pipeline

./: .gitignore  README.md  README.rst  pyproject.toml
code/: test.py
receiver/: receiver_demo.py
src/ai/backend/submission/: .evaluator.py.swp  evaluator.py  evaluator_cli.py  evaluator_sdk.py  logging.py  submit.py
submit/: main.py
tests/: test_submit.py
