[tool.poetry]
name = "backend.ai-submission-pipeline"
version = "0.1.0"
description = ""
authors = ["Jeongkyu Shin <inureyes@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
fastapi = "^0.65.2"
uvicorn = "^0.14.0"
python-multipart = "^0.0.5"
aiofiles = "^0.7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
receive = "cd receive;uvicorn --reload receiver_demo:app"
submit = "submit.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
