[tool.poetry]
name = "backend.ai-submission-pipeline"
version = "0.1.0"
description = ""
authors = ["Jeongkyu Shin <inureyes@gmail.com>"]
packages = [
    { include = "ai/backend/submission", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
fastapi = "^0.65.2"
uvicorn = "^0.14.0"
python-multipart = "^0.0.5"
aiofiles = "^0.7.0"
"backend.ai-client" = "^21.3.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.9.2"
mypy = "^0.910"
types-requests = "^2.25.0"
types-pkg-resources = "^0.1.3"
types-aiofiles = "^0.1.5"

[tool.poetry.scripts]
evaluator-cli = "ai.backend.submission.evaluator_cli:main"
evaluator-sdk = "ai.backend.submission.evaluator_sdk:main"
submit = "ai.backend.submission.submit:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
